[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forgetting-engine"
version = "0.1.0"
description = "Forgetting Engine — Agent memory middleware"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["forgetting_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
